--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -118,6 +118,11 @@
 	text-decoration: none;
 	color: #FFFFFF;
 	padding: 10px 5px;
+	font-family: Lato;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 16px;
+	line-height: 19px;
 }
 .nav a:hover{
 	background: #C4C4C4;
@@ -147,7 +152,7 @@
 	bottom: 80.34%;
 }
 .input-medium{
-	width: 371px;
+	width: 100%;
 	left: 0%;
 	right: 0%;
 }
@@ -504,4 +509,163 @@
 		left: 610px;
 	}
 	
+}
+@media screen and (min-width:  1112px) and (orientation: landscape){
+	#header{
+		height: 80px;
+		justify-content: normal;
+	}
+	#logo{
+		width: 40px;
+		height: 36.84px;
+	}
+	#header h2{
+		width: 411px;
+		left: 82px;
+		top: 19px;
+		font-size: 24px;
+
+	}
+	#menu{
+		display: none;
+	}
+	.nav{
+		width: 350px;
+		height: 40px;
+		right: 40px;
+		top: 20px;
+		background: #FFFFFF;
+	}
+	#menu-close{
+		display: none;
+	}
+	.nav ul{
+		top: 0px;
+	}
+	
+	.nav li{
+		position: absolute;
+		text-align: center;
+		margin: 0px;
+		padding: 0px;
+	}
+	.nav li:nth-child(1){
+		margin-top: 0px;
+		height: 40px;
+		width:200px;
+		top: 10px;
+	}
+	.nav li:nth-child(2){
+		height: 40px;
+		width: 150px;
+		right: -360px;
+		top: 10px;
+	}
+	.nav a{
+		display: inline;
+		color: #333333;
+		text-align: center;
+	}
+	.nav a:hover{
+		color: #E0E0E0;
+		background: transparent;
+	}
+	#form{
+		width: 400px;
+		height: 344px;
+		left: 50px;
+		top: calc(50% - 344px/2);
+		border: 1px solid #333333;
+	}
+	.form-title{
+		display: flex;
+		position: absolute;
+		height: 20px;
+		left: calc(50% - 174px/2);
+		top: calc(50% - 20px/2 - 142px);
+		
+	}
+	.form-title h2{;
+		font-weight: bold;
+		font-size: 18px;
+		
+	}
+	.dropdown{
+		width: 400px;
+		left: 3.72%;
+		right: 3.72%;
+		top: 17.73%;
+		bottom: 65.7%;
+	}
+	.dropdown select{
+		width: 370.2px;
+		height: 32px;
+		left: 0%;
+		right: 0%;
+		top: 25px;
+	}
+	.name-div{
+		left: 3.72%;
+		right: 3.72%;
+		top: 40.12%;
+		bottom: 43.31%;
+	}
+	.name-div input{
+		width: 370.2px;
+		height: 32px;
+		left: 0px;
+		right: 0.2px;
+		top: 24px;
+	}
+	.value-div{
+		left: 3.72%;
+		right: 3.72%;
+		top: 62.5%;
+		bottom: 21.51%;
+	}
+	.value-div input{
+		width: 370.2px;
+		height: 32px;
+		left: 0px;
+		right: 0.2px;
+		top: 24px;
+	}
+	#form .button-div{
+		left: 3.72%;
+		right: 3.72%;
+		top: 84.59%;
+		bottom: 5.81%;
+	}
+	#ac-statement{
+		width: 652px;
+		height: 281px;
+		left:	550px;;
+		top: calc(50% - 344px/2);
+		text-align: center;
+		}
+
+	#ac-statement h2{
+		left: 239px;
+	}
+	#frame{
+		width: 652px;
+	}
+	.thead-1{
+		left: 40px;
+	}
+	.thead-2{
+		left: 599px;
+	}
+	.vl{
+		width: 652px;
+	}
+	/.l1 td:nth-child(1), .l2 td:nth-child(1), .l3 td:nth-child(1){
+		left: 20px;
+	}
+	.l1 td:nth-child(2), .l2 td:nth-child(2), .l3 td:nth-child(2), .l4 td:nth-child(1){
+		left: 40px;
+	}
+	.l1 td:nth-child(3), .l2 td:nth-child(3), .l3 td:nth-child(3), .l4 td:nth-child(2), .l4 td:nth-child(3){
+		left: 580px;
+	}
 }
