--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -62,12 +62,6 @@
 	border: none;
 	background: transparent;
 }
-#check{
-	display: none;
-}
-#check:checked ~ .nav{
-	width: 351px;
-}
 #menu img{
 	width: 24px;
 	background: transparent;
@@ -89,9 +83,6 @@
 	border: none;
 	padding-top: 20px;
 	padding-left: 20px;
-}
-#checkbox2:checked ~ .nav{
-	background: pink;
 }
 
 .nav ul{
@@ -126,9 +117,6 @@
 }
 .nav a:hover{
 	background: #C4C4C4;
-}
-#check:checked ~ #menu span{
-	transition: background-color:  #FFFFFF;
 }
 #frame{
 	width: 371px;
@@ -399,9 +387,63 @@
 		top: calc(50% - 43px/2 + 0.5px);
 	}
 	#menu{ 
-		left: 726px;
-	}	
+		display: none;
+	}
+	.nav{
+		z-index: 1;
+		display: flex;
+		position: absolute;
+		width: 300px;
+		background: #333333;
+		top: 0px;
+		right: 0px;
+		height: 1500px;
+		transition: all 0.7s;
+	}
+	#menu-close{
+		position: absolute;
+		cursor: pointer;
+		background: transparent;
+		border: none;
+		padding-top: 20px;
+		padding-left: 20px;
+	}
+
+	.nav ul{
+		list-style: none;
+		position: absolute;
+		top: 40px;
+	}
+
+	.nav li:nth-child(1){
+		margin-top: 30px;
+		width: 351px;
+		height: 32px;
+		top: 62px;
+	}
+	.nav li:nth-child(2){
+		width: 351px;
+		height: 32px;
+		top: 101px;
+	}
+
+	.nav a{
+		display: flex;
+		text-align: left;
+		text-decoration: none;
+		color: #FFFFFF;
+		padding: 10px 5px;
+		font-family: Lato;
+		font-style: normal;
+		font-weight: 600;
+		font-size: 16px;
+		line-height: 19px;
+	}
+	.nav a:hover{
+		background: #C4C4C4;
+	}
 	#form{
+		display: block;
 		width: 728px;
 		height: 189px;
 		top: 104px;
@@ -420,6 +462,12 @@
 		font-weight: bold;
 		text-align: center;
 		font-size: 18px;
+	}
+	#form label:nth-child(1){
+		bottom: 61.01%;
+	}
+	#form label:nth-child(2), label:nth-child(3){	
+		bottom: 60.78%;
 	}
 	.dropdown{
 		width: 150px;
@@ -459,18 +507,21 @@
 		bottom: 38.62%;
 	}
 	.value-div input{
+		z-index: -1;
 		width: 150px;
 		height: 32px;
 		left: 0px;
 		right: 0px;
 		top: 24px;
 	}
-	#form label{
-		left: 0%;
-		right: 0%;
-		top: 0%;
+	#form label:nth-child(1){
+	bottom: 61.01%;
+	}
+	#form label:nth-child(2), label:nth-child(3){	
+		bottom: 60.78%;
 	}
 	#form .button-div{
+		z-index: -1;
 		width: 200px;
 		left: 69.78%;
 		right: 2.75%;
@@ -478,6 +529,7 @@
 		bottom: 10.58%;
 	}
 	#ac-statement{
+		z-index: -1;
 		width: 728px;
 		height: 281px;
 		left: calc(50% - 728px/2);
@@ -532,7 +584,7 @@
 	.nav{
 		width: 350px;
 		height: 40px;
-		right: 40px;
+		left: 742px;
 		top: 20px;
 		background: #FFFFFF;
 	}
@@ -571,6 +623,7 @@
 		background: transparent;
 	}
 	#form{
+
 		width: 400px;
 		height: 344px;
 		left: 50px;
@@ -589,6 +642,12 @@
 		font-weight: bold;
 		font-size: 18px;
 		
+	}
+	#form label:nth-child(1){
+	bottom: 61.01%;
+	}
+	#form label:nth-child(2), label:nth-child(3){	
+		bottom: 60.78%;
 	}
 	.dropdown{
 		width: 400px;
@@ -668,4 +727,165 @@
 	.l1 td:nth-child(3), .l2 td:nth-child(3), .l3 td:nth-child(3), .l4 td:nth-child(2), .l4 td:nth-child(3){
 		left: 580px;
 	}
+}
+
+@media screen and (min-width: 1500px){
+	#header{
+		height: 80px;
+	}
+	#logo{
+		width: 40px;
+		left: 50px;
+		height: 36.84px;
+	}
+	#header h2{
+		width: 411px;
+		left: 60px;
+		top: 19px;
+		font-size: 24px;
+
+	}
+	#menu{
+		display: none;
+	}
+	.nav{
+		width: 350px;
+		height: 40px;
+		left: 750px;
+		top: 20px;
+		background: #FFFFFF;
+	}
+	#menu-close{
+		display: none;
+	}
+	.nav ul{
+		top: 0px;
+	}
+	
+	.nav li{
+		position: absolute;
+		text-align: center;
+		margin: 0px;
+		padding: 0px;
+	}
+	.nav li:nth-child(1){
+		margin-top: 0px;
+		height: 40px;
+		width:200px;
+		top: 10px;
+	}
+	.nav li:nth-child(2){
+		height: 40px;
+		width: 150px;
+		right: -360px;
+		top: 10px;
+	}
+	.nav a{
+		display: inline;
+		color: #333333;
+		text-align: center;
+	}
+	.nav a:hover{
+		color: #E0E0E0;
+		background: transparent;
+	}
+	#form{
+		width: 400px;
+		height: 344px;
+		left: 50px;
+		top: 120px;
+		border: 1px solid #333333;
+	}
+	.form-title{
+		display: flex;
+		position: absolute;
+		height: 20px;
+		left: calc(50% - 174px/2);
+		top: calc(50% - 20px/2 - 142px);
+		
+	}
+	.form-title h2{;
+		font-weight: bold;
+		font-size: 18px;
+		
+	}
+	.dropdown{
+		width: 400px;
+		left: 3.72%;
+		right: 3.72%;
+		top: 17.73%;
+		bottom: 65.7%;
+	}
+	.dropdown select{
+		width: 370.2px;
+		height: 32px;
+		left: 0%;
+		right: 0%;
+		top: 25px;
+	}
+	.name-div{
+		left: 3.72%;
+		right: 3.72%;
+		top: 40.12%;
+		bottom: 43.31%;
+	}
+	.name-div input{
+		width: 370.2px;
+		height: 32px;
+		left: 0px;
+		right: 0.2px;
+		top: 24px;
+	}
+	.value-div{
+		left: 3.72%;
+		right: 3.72%;
+		top: 62.5%;
+		bottom: 21.51%;
+	}
+	.value-div input{
+		width: 370.2px;
+		height: 32px;
+		left: 0px;
+		right: 0.2px;
+		top: 24px;
+	}
+	#form .button-div{
+		left: 3.72%;
+		right: 3.72%;
+		top: 84.59%;
+		bottom: 5.81%;
+	}
+	#ac-statement{
+		width: 680px;
+		height: 281px;
+		left:	500px;;
+		top: 120px;
+		text-align: center;
+		}
+
+	#ac-statement h2{
+		left: 239px;
+	}
+	#frame{
+		width: 652px;
+	}
+	.thead-1{
+		left: 40px;
+	}
+	.thead-2{
+		left: 627px;
+	}
+	.vl{
+		width: 680px;
+	}
+	/.l1 td:nth-child(1), .l2 td:nth-child(1), .l3 td:nth-child(1){
+		left: 20px;
+	}
+	.l1 td:nth-child(2), .l2 td:nth-child(2), .l3 td:nth-child(2), .l4 td:nth-child(1){
+		left: 40px;
+	}
+	.l1 td:nth-child(3), .l2 td:nth-child(3), .l3 td:nth-child(3), .l4 td:nth-child(2), .l4 td:nth-child(3){
+		left: 600px;
+	}
+
 }
