Adicionando checkbox para controle de width da barra de navegação.

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -42,6 +42,9 @@ header .hamburguer{
 	margin-right: 24px;
 	cursor: pointer;
 }
+header input{
+	display: none;
+}
 /* configurando menu de navegação */
 nav{
 	position: absolute;
